@@ -709,6 +709,15 @@ name|numRegions
 init|=
 literal|0
 decl_stmt|;
+name|StringBuilder
+name|strBalanceParam
+init|=
+operator|new
+name|StringBuilder
+argument_list|(
+literal|"Server information: "
+argument_list|)
+decl_stmt|;
 comment|// Iterate so we can count regions as we build the map
 for|for
 control|(
@@ -782,7 +791,68 @@ argument_list|,
 name|regions
 argument_list|)
 expr_stmt|;
+name|strBalanceParam
+operator|.
+name|append
+argument_list|(
+name|server
+operator|.
+name|getKey
+argument_list|()
+operator|.
+name|getServerName
+argument_list|()
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|"="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|server
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|", "
+argument_list|)
+expr_stmt|;
 block|}
+name|strBalanceParam
+operator|.
+name|delete
+argument_list|(
+name|strBalanceParam
+operator|.
+name|length
+argument_list|()
+operator|-
+literal|2
+argument_list|,
+name|strBalanceParam
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|strBalanceParam
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// Check if we even need to do any load balancing
 name|float
 name|average
@@ -927,6 +997,71 @@ name|min
 operator|+
 literal|1
 decl_stmt|;
+comment|// Using to check banance result.
+name|strBalanceParam
+operator|.
+name|delete
+argument_list|(
+literal|0
+argument_list|,
+name|strBalanceParam
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|strBalanceParam
+operator|.
+name|append
+argument_list|(
+literal|"Balance parameter: numRegions="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|numRegions
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|", numServers="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|numServers
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|", max="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|max
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|", min="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|min
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|strBalanceParam
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// Balance the cluster
 comment|// TODO: Look at data block locality or a more complex load to do this
 name|MinMaxPriorityQueue
